# self-consistent-expression-recovery-machine

./: .gitattributes  .gitignore  MANIFEST.in  README.md  chydra3.m  dataLabel_CellTax.mat  demo_experimentalData_1.m  demo_experimentalData_2.m  demo_nmethods.m  demo_serm.ipynb  demo_serm.py  demo_simulationData.asv  demo_simulationData.m  environment.yml  experimentalData_2_StemCell.ipynb  findDist3.m  requirements.txt  serm.py  serm_v3.asv  serm_v3.m  serm_v3.p  setup.cfg  setup.py  sparseae.py
.github/workflows/: publish-to-pypi.yml  release.yml  testpypi-publish.yml
MATLAB_Implementation/: adapthisteqSERM.m  demo_serm.m  demo_simulationData.m  findDistribution.m  recovery.m  serm.m  violinplotT.m
R_implementation/: readme
demo/: demo_serm.ipynb  demo_serm.py
demo/data/: dataLabel_CellTax.mat  data_label.mat  genoANN_db.xlsx
example_data/: gT-2.mat  groundTruth_2_StemCell.csv
serm/: __init__.py  serm.py  sparseae.py
