[metadata]
name = serm
version = 0.0.1
author = Vasudha Jha
author_email = reachvasudha27@gmail.com
description = SERM is a data-driven gene expression recovery framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xinglab-ai/self-consistent-expression-recovery-machine
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True